init elastic rest client for java
